# vortexje

./: AUTHORS.txt  CMakeLists.txt  INSTALL.txt  LICENSE.txt  Makefile  README.md  README.txt  config.mk  vortexje.pc  vortexje.pc.in
cmake/: set_cxx_norm.cmake
doc/: Doxyfile  Doxyfile.in
examples/: .gitignore  CMakeLists.txt  Makefile  clark-y-section.cpp  clarky-section.cpp  clarky.dat.README  gmsh-lifting-surface.cpp  hawt.cpp  naca0012-section-oscillation.cpp  naca0025-rounded-tips.cpp  sphere.cpp  sphere.msh  vawt.cpp  wing-builder.cpp  wing.cpp
examples/clarky-section/: CMakeLists.txt  clarky-section.cpp
examples/gmsh-lifting-surface/: CMakeLists.txt  gmsh-lifting-surface.cpp  gmsh-lifting-surface.msh
examples/hawt/: CMakeLists.txt  README  hawt.cpp
examples/naca0012-section-oscillation/: CMakeLists.txt  naca0012-section-oscillation.cpp
examples/vawt/: CMakeLists.txt  vawt.cpp
test/: .gitignore  CMakeLists.txt  Makefile  naca0012.msh  test-naca0012.cpp  test-sphere.cpp  test-vawt.cpp  test-wing-builder.cpp  test-wing.cpp
tests/: CMakeLists.txt  test-elliptic-planform.cpp  test-naca0012-airfoil.cpp  test-sphere.cpp
tests/elliptic-planform/: CMakeLists.txt  test-elliptic-planform.cpp
tests/interpolation-layer/: CMakeLists.txt  test-interpolation-layer.cpp
tests/naca0012-airfoil/: CMakeLists.txt  naca0012-reference-data.txt  test-naca0012-airfoil.cpp
tests/sphere/: CMakeLists.txt  test-sphere.cpp
tests/vortex-core/: CMakeLists.txt  test-vortex-core.cpp
uml/: vortexje.xmi
vortexje/: .gitignore  CMakeLists.txt  Makefile  body.cpp  body.hpp  boundary-layer.hpp  collection.cpp  collection.hpp  field-writer.cpp  field-writer.hpp  lifting-surface-builder.cpp  lifting-surface-builder.hpp  lifting-surface.cpp  lifting-surface.hpp  mesh.cpp  mesh.hpp  numeric-stream.hpp  parameters.cpp  parameters.hpp  solver.cpp  solver.hpp  surface-builder.cpp  surface-builder.hpp  surface-loader.hpp  surface-writer.cpp  surface-writer.hpp  surface.cpp  surface.hpp  vector-aligned.hpp  wake.cpp  wake.hpp  wing-builder.cpp  wing-builder.hpp  wing.cpp  wing.hpp
vortexje/airfoils/: Makefile  clark-y.cpp  clark-y.hpp  naca4.cpp  naca4.hpp
vortexje/boundary-layers/: CMakeLists.txt  dummy-boundary-layer.cpp  dummy-boundary-layer.hpp
vortexje/empirical-wakes/: CMakeLists.txt  ramasamy-leishman-wake.cpp  ramasamy-leishman-wake.hpp
vortexje/field-writers/: CMakeLists.txt  Makefile  vtk-field-writer.cpp  vtk-field-writer.hpp
vortexje/shape-generators/: CMakeLists.txt  Makefile  ellipse-generator.cpp  ellipse-generator.hpp  ellipse.cpp  ellipse.hpp
vortexje/shape-generators/airfoils/: CMakeLists.txt  Makefile  clark-y-airfoil-generator.cpp  clark-y-airfoil-generator.hpp  clark-y-generator.cpp  clark-y-generator.hpp  clark-y.cpp  clark-y.hpp  naca4-airfoil-generator.cpp  naca4-airfoil-generator.hpp  naca4-generator.cpp  naca4-generator.hpp  naca4.cpp  naca4.hpp
vortexje/shapes/: ellipse.cpp  ellipse.hpp
vortexje/shapes/airfoils/: clark-y.cpp  clark-y.hpp  naca4.cpp  naca4.hpp
vortexje/surface-loaders/: CMakeLists.txt  Makefile  gmsh-surface-loader.cpp  gmsh-surface-loader.hpp  ply-surface-loader.cpp  ply-surface-loader.hpp
vortexje/surface-loaders/rply/: CMakeLists.txt
vortexje/surface-writers/: CMakeLists.txt  Makefile  gmsh-surface-writer.cpp  gmsh-surface-writer.hpp  vtk-surface-writer.cpp  vtk-surface-writer.hpp
